<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Layout for the header -->

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:background="@color/green">

        <ImageView
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:padding="5dp"
            android:src="@drawable/ic_check_white_24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/add_transaction"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:padding="5dp"
            android:src="@drawable/ic_clear_white_24dp" />


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:orientation="vertical">

        <!-- transaction type spinner -->

        <TextView
            android:id="@+id/help_label1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/please_select_transaction_type"
            android:textColor="@color/black" />

        <Spinner
            android:id="@+id/typeSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:entries="@array/spinner_values"
            android:prompt="@string/select_type_hint"
            android:textAlignment="viewEnd" />

        <!-- amount textbox-->

        <TextView
            android:id="@+id/help_label2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/please_add_the_amount"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/apptheme_textfield_activated_holo_light"
            android:ems="10"
            android:hint="@string/amount"
            android:inputType="number" />

        <!-- category spinner spinner -->

        <TextView
            android:id="@+id/help_label3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/please_choose_transaction_category"
            android:textColor="@color/black" />

        <Spinner
            android:id="@+id/category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:gravity="end"
            android:prompt="@string/select_category"
            android:spinnerMode="dialog" />

        <!-- Date textbox -->

        <TextView
            android:id="@+id/help_label4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/please_add_transaction_date"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/apptheme_textfield_activated_holo_light"
            android:ems="10"
            android:hint="@string/date"
            android:textSize="18sp" />

        <!-- notes textbox -->

        <TextView
            android:id="@+id/help_label5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/please_add_notes"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/apptheme_textfield_activated_holo_light"
            android:ems="10"
            android:hint="@string/note"
            android:inputType="textPersonName" />
    </LinearLayout>

</RelativeLayout>