<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.Advanced.Academy.Mahfazty.MainActivity"
    >

    <!-- Layout for the header -->

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:background="@color/green">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"
            android:text="@string/overview"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/drawer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:padding="5dp"
            android:src="@drawable/ic_menu_white_24dp" />

    </RelativeLayout>

    <!-- Current cash view -->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:id="@+id/linearLayout">

        <TextView
            android:id="@+id/current_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cash_label"
            android:textColor="@color/green"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/current"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/pound"
            android:layout_gravity="center"
            android:textColor="@color/text"
            android:textSize="18sp" />

        <!-- Income view -->

        <TextView
            android:id="@+id/income_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/income_label"
            android:textColor="@color/green"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/income"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/pound"
            android:layout_gravity="center"
            android:textColor="@color/text"
            android:textSize="18sp" />

        <!-- Expense view -->

        <TextView
            android:id="@+id/expenses_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:text="@string/expense_label"
            android:textColor="@color/green"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/expenses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/pound"
            android:layout_gravity="center"
            android:textColor="@color/text"
            android:textSize="18sp" />


    </LinearLayout>

    <!-- add button view -->

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="16dp"
        android:background="@color/green"
        android:clickable="true"
        android:scaleType="fitXY"
        android:src="@drawable/ic_add_white_36dp"
        app:backgroundTint="@color/green"
        app:borderWidth="0dp"
        app:fabSize="normal" />
</RelativeLayout>
